--- a/src/app/cats-location/cats-location.component.html
+++ b/src/app/cats-location/cats-location.component.html
@@ -1,4 +1,4 @@
-<section class="cat">
+<section class="cat" [routerLink]="['details', catSpec.id]">
   <img
     class="cat-photo"
     [src]="catSpec.photoUrl"
