--- a/src/app/cats-location/cats-location.component.css
+++ b/src/app/cats-location/cats-location.component.css
@@ -2,6 +2,7 @@
   background: var(--accent-color);
   border-radius: 30px;
   padding-bottom: 30px;
+  cursor: pointer;
 }
 .cat-heading {
   color: var(--primary-color);
