add fluff colour

--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -13,6 +13,7 @@
     <ul>
       <li>Fluff age: {{ catSpec?.age }}</li>
       <li>Fluff breed: {{ catSpec?.breed }}</li>
+      <li>Fluff colour: {{ catSpec?.color }}</li>
       <li>Is this catto available: {{ catSpec?.isAvailable }}</li>
       <li>Does this cat have a microchip: {{ catSpec?.hasMicrochip }}</li>
       <li>Is this sweet fluff vaccianted: {{ catSpec?.isVaccinated }}</li>
