--- a/src/app/details/details.component.css
+++ b/src/app/details/details.component.css
@@ -4,6 +4,7 @@
   object-fit: cover;
   border-radius: 30px;
   float: right;
+  padding-right: 5px;
 }
 
 .cat-heading {
@@ -69,4 +70,9 @@ input {
     width: 100%;
     height: 600px;
   }
+}
+
+/* Add padding-left to all elements except .cat-photo */
+*:not(.cat-photo) {
+  padding-left: 5px;
 }
